# ionice

./: README.md
ionik/: !vmt.md  GamePid.txt  LICENSE  run.sh
ionik/OI/: Cargo.toml  makefile
ionik/OI/src/: main.rs
